<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductSelectCustomer" >

    <Button
        android:id="@+id/btn_rice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="changeFragment"
        android:text="@string/btn_rice"
        app:backgroundTint="#ff9800" />

    <Button
        android:id="@+id/btn_kottu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="changeFragment"
        android:text="@string/btn_kottu"
        app:backgroundTint="#ff9800" />

    <Button
        android:id="@+id/btn_burger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="changeFragment"
        android:text="@string/btn_burger"
        app:backgroundTint="#ff9800" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/defaultfood"
        android:name="com.example.madproject.FragmentP"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>