<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalInvoice"
    android:background="#ffebcc">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginBottom="34dp"
        android:text="@string/btn_back"
        android:textColor="@color/black"
        app:backgroundTint="@color/LightGreen" />

    <Button
        android:id="@+id/btn_place"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="33dp"
        android:text="@string/btn_place"
        android:textColor="@color/black"
        app:backgroundTint="@color/LightYellow" />

    <TextView
        android:id="@+id/txt_subtotval"
        android:layout_width="180dp"
        android:layout_height="52dp"
        android:layout_above="@+id/btn_place"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="15dp"
        android:background="#FFFFFF"
        android:textAlignment="center"
        android:textColor="@color/Orange"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_od"
        android:layout_width="198dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:fontFamily="@font/bungee"
        android:gravity="center"
        android:text="Order  Details"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_subtot"
        android:layout_width="170dp"
        android:layout_height="53dp"
        android:layout_above="@+id/btn_back"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginBottom="15dp"
        android:background="#ff9800"
        android:gravity="center"
        android:text="@string/txt_subtot"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="267dp"
        android:layout_height="98dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="210dp">

        <RadioButton
            android:id="@+id/rabtn_take"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rabtn_take"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rabtn_deli"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rabtn_deli"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="197dp"
        android:layout_height="41dp"
        android:layout_below="@+id/txt_od"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="107dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="107dp"
        android:text="Enter a Valid Email"
        android:textAlignment="center"
        android:textColor="@color/Orange"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="267dp"
        android:layout_height="41dp"
        android:layout_below="@+id/et_mail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="72dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="72dp"
        android:text="Select an Order Type"
        android:textColor="@color/Orange"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>