<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="#ffebcc">


    <Button
        android:id="@+id/btn_food"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="114dp"
        android:layout_marginLeft="113dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="114dp"
        android:layout_marginRight="114dp"
        android:text="@string/btn_food"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#8585AD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="219dp"
        android:layout_height="225dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/final2" />

    <Button
        android:id="@+id/btn_lgin"
        android:layout_width="wrap_content"
        android:layout_height="82dp"
        android:layout_above="@+id/imageView2"
        android:layout_below="@+id/btn_food"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="101dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_lgin"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#ff9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_food" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="260dp"
        android:layout_height="155dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="73dp"
        android:layout_marginBottom="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_lgin"
        app:srcCompat="@drawable/unnamed" />

    <Button
        android:id="@+id/btn_contact"
        android:layout_width="179dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="114dp"
        android:layout_marginLeft="118dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="114dp"
        android:layout_marginRight="114dp"
        android:layout_marginBottom="44dp"
        android:text="@string/btn_contact"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#00E600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</RelativeLayout>